Agora, apó sinserir ou atualizar um produto, vai para a lista e mostra a mensagem de confirmação

--- a/src/main/resources/templates/produto.html
+++ b/src/main/resources/templates/produto.html
@@ -12,7 +12,7 @@
 			<input type="hidden" name="id" th:value="${produto.id}"> <br>
 	
 			<span for="nome">Nome:</span>
-			<input type="text" th:value="${produto.nome}" > <br>
+			<input type="text" name="nome" th:value="${produto.nome}" > <br>
 			
 			<span for="descricao">Descrição:</span>
 			<input type="text" name="descricao" th:value="${produto.descricao}"> <br>
